     which should not be encoded.
     Calls with an action object (rather than a string), or uri_for action
     will still encode / in args and captures to %2F

   - The above noted / => %2F encoding in uri_for_action or uri_for with
     an action object has been fixed to not just encode the first slash in
     any set of args/captures.

  New features:
   - Allow passing additional arguments to action constructors.

5.80018 2010-01-12 22:24:20

  Bug fixed:
   - Call ->canonical on URI derived from $ENV{REQUEST_URI} to get
     paths correctly decoded. This bug was previously hidden by a bug
     in HTTP::Request::AsCGI.

  Documentation:
   - Clarify that uri_for_action works on private paths, with example.
   - Clarify documentation about debug

  Deprecations:
   - Saying use Catalyst::Test; (without an application name or () to stop
     the importer running is now deprecated and will issue a warning.
     You should be saying use Catalyst::Test ();

5.80017 2010-01-10 02:27:29

  Documentation:
   - Fix docs for ->forward method when passed a class name - this should
     be a component name (e.g. View::HTML, not a full class name, like
     MyApp::View::HTML).

  Bug fixes:
   - --daemon and -d options to Catalyst::Script::FastCGI are fixed.
   - Fix the debug dump for applications which use Catalyst::Plugin::Session
     (RT#52898)
   - Fix regression in the case where mod_rewrite is being used to rewrite
     requests into a path below your application base introduced with the
     %2F related fixes in 5.80014_02.
   - Do not crash on SIGHUP if Catalyst::Engine::HTTP->run is not passed the
     argv key in the options hash.
   - Correctly pass the arguments to Catalyst::Script::Server through to
     Catalyst::Engine::HTTP->run so that the server can restart itself
     with the correct options on SIGHUP.
   - Require new MooseX::MethodAttributes to be compatible with Moose
     versions >= 0.93_01